# ChangeLog for net-im/mcabber
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-im/mcabber/ChangeLog,v 1.37 2008/10/07 07:29:13 wschlich Exp $

*mcabber-0.9.8 (07 Oct 2008)

  07 Oct 2008; Wolfram Schlich <wschlich@gentoo.org> +mcabber-0.9.8.ebuild:
  version bump

  05 Aug 2008; Thomas Anderson <gentoofan23@gentoo.org> metadata.xml:
  Add USE flag description to metadata as per GLEP 56.

  17 May 2008; Olivier Crête <tester@gentoo.org> mcabber-0.9.6.ebuild,
  mcabber-0.9.7.ebuild:
  Remove rdep on pkgconfig

*mcabber-0.9.7 (24 Apr 2008)

  24 Apr 2008; Wolfram Schlich <wschlich@gentoo.org> +mcabber-0.9.7.ebuild:
  version bump

  28 Mar 2008; Brent Baude <ranger@gentoo.org> mcabber-0.9.6.ebuild:
  stable ppc, bug 215064

  28 Mar 2008; Ferris McCormick <fmccor@gentoo.org> mcabber-0.9.6.ebuild:
  Sparc stable, Bug #215064, thanks to Aaron Mavrinac (ezod) for testing.

  27 Mar 2008; Markus Meier <maekke@gentoo.org> mcabber-0.9.6.ebuild:
  amd64/x86 stable, bug #215064

  27 Mar 2008; Markus Rothe <corsair@gentoo.org> mcabber-0.9.6.ebuild:
  Stable on ppc64; bug #215064

  14 Mar 2008; Christian Heim <phreak@gentoo.org> metadata.xml:
  Removing Przemyslaw Maciag (troll, #104750) from metadata.xml.

  11 Mar 2008; Wolfram Schlich <wschlich@gentoo.org> mcabber-0.9.6.ebuild:
  added missing pkgconfig dep wrt bug #205494

  10 Feb 2008; Wolfram Schlich <wschlich@gentoo.org> -mcabber-0.7.4.ebuild,
  -mcabber-0.7.6.ebuild, -mcabber-0.7.8.ebuild, -mcabber-0.8.2.ebuild,
  -mcabber-0.9.0.ebuild, -mcabber-0.9.1.ebuild, -mcabber-0.9.2.ebuild,
  -mcabber-0.9.3.ebuild, -mcabber-0.9.4.ebuild:
  removed old versions

*mcabber-0.9.6 (10 Feb 2008)

  10 Feb 2008; Wolfram Schlich <wschlich@gentoo.org> +mcabber-0.9.6.ebuild:
  version bump

  27 Jan 2008; Christoph Mende <angelos@gentoo.org> mcabber-0.9.5.ebuild:
  Stable on amd64, bug #204287

  16 Jan 2008; Brent Baude <ranger@gentoo.org> mcabber-0.9.5.ebuild: