@@ -1,6 +1,9 @@
 # ChangeLog for net-im/mcabber
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-im/mcabber/ChangeLog,v 1.37 2008/10/07 07:29:13 wschlich Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-im/mcabber/ChangeLog,v 1.38 2008/10/07 07:33:35 wschlich Exp $
+
+  07 Oct 2008; Wolfram Schlich <wschlich@gentoo.org> -mcabber-0.9.5.ebuild:
+  removed old version
 
 *mcabber-0.9.8 (07 Oct 2008)
 
